source/_style/stylesheet.css
body {
  background: 
    linear-gradient(0deg, rgba(255, 255, 255, .8), rgba(255, 255, 255, 0)), 
    linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, .1)), 
    url("assets/bg.jpg");
  background-size: cover;
  background-position-y: 10%;
  background-attachment: fixed;
  margin: 0;
}

#home-page-header {
  display: grid;
  grid-auto-flow: row;
  justify-items: center;
  padding: 2rem;
}
#home-page-header h1,
#home-page-header h1 a {
  font-size: 5rem;
  text-decoration: none;
}
#home-page-header * {
  color: white;
}
#home-page-header .ipa {
  color: var(--yellow);
}

#home-page-footer {
  position: fixed;
  left: 0;
  bottom: 2rem;
  width: 15rem;
  margin-left: -17rem;

  text-align: left;
  border-radius: 0 0.5rem 0.5rem 0;
  padding: 1rem 2rem;
  background-color: rgba(0, 0, 0, 0.6);
  opacity: 0.2;
  color: white;

  transition: opacity 1s, margin-left 1s;
}
#home-page-footer * {
  color: white;
}
#home-page-footer:hover {
  opacity: 1;
  margin-left: 0;
}
#home-page-footer::after {
  content: "i";
  position: absolute;
  right: 1rem;
  top: 0.5rem;
}

nav {
  display: grid;
  grid-auto-flow: column;
  gap: 1cm;

  font-family: var(--head);
  font-size: 1.5rem;
}

h1.sub,
h2.sub, 
h3.sub, 
h4.sub, 
h5.sub, 
h6.sub {
  margin-top: 0;
  margin-bottom: 0.5em;
}

.ipa {
  font-family: var(--mono);
  font-variant: normal;
  font-weight: normal;
  text-decoration: none;
  white-space: nowrap;
}
.ipa:before, .ipa:after {
  content: "/";
  display: inline;
  font-size: .8em;
  line-height: 1em;
}

.suffix {
  font-size: 1rem;
}

blockquote > ul {
  break-inside: avoid;
  list-style-position: inside;
  list-style-type: none;
  margin-top: 0;
}
ul.contents:before {
  content: "Contents";
  font-family: var(--head);
  font-weight: 700;
  font-variant: small-caps;
  color: var(--red);
  font-size: 18pt;
  margin-block-end: 2pt;
}
blockquote > ul li {
  padding: .5rem;
}
blockquote > ul li:hover {
  background-color: rgba(255, 255, 255, .2)
}
blockquote > ul a {
  text-decoration: none;
}

hex-grid {
  column-span: all;
  justify-content: center;
  align-content: center;
  align-items: center;
  justify-items: center;
}

